# musickit

./: .gitignore  404.html  CLAUDE.md  MUSICKIT.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  desktop-release.yml  docs.yml  release.yml
api-reference/: index.html
architecture/: index.html
desktop/: README.md
desktop/electron/: package.json
desktop/electron-react/: package.json
desktop/electron-react/src/: main.js  preload.js
desktop/electron/src/: main.js  preload.js
desktop/frontend/: _app.css  _palette.css  index.html  picker.css  picker.js  shell.css
desktop/frontend/js/: api.js  app.js  md5.js  palette.js  shell.js  store.js  visualizer.js
desktop/react/: README.md  desktop-overrides.css  index.html  main.jsx  musickit.css
desktop/react/src/: _api.js  _audio.js  _md5.js  _wiring.jsx  app.jsx  chrome.jsx  covers.jsx  data.jsx  overlays.jsx  views.jsx  visualizer.jsx
desktop/tauri-react/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri-react/src-tauri/capabilities/: default.json
desktop/tauri-react/src-tauri/src/: lib.rs  main.rs
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/capabilities/: default.json
desktop/tauri/src-tauri/icons/: icon.icns
desktop/tauri/src-tauri/src/: lib.rs  main.rs
docs/: api-reference.md  architecture.md  edge-cases.md  index.md  roadmap.md
docs/guides/: convert.md  desktop.md  development.md  inspect.md  library.md  mobile.md  playlist.md  quickstart.md  retag-cover.md  serve.md  tui.md  tutorial.md  ui.md
edge-cases/: index.html
guides/convert/: index.html
guides/desktop/: index.html
guides/development/: index.html
guides/inspect/: index.html
guides/mobile/: index.html
guides/playlist/: index.html
guides/quickstart/: index.html
guides/serve/: index.html
guides/tui/: index.html
guides/tutorial/: index.html
guides/ui/: index.html
roadmap/: index.html
scripts/: copy_ui_static.py  gen_screenshots.py  rename_tauri_artifacts.py  sync_desktop_versions.py
search/: search_index.json
src/musickit/: __init__.py  __main__.py  _toml_dump.py  cli.py  config.py  convert.py  cover.py  discover.py  library.py  metadata.py  naming.py  pipeline.py  radio.py
src/musickit/cli/: __init__.py  _scan.py  config_cmd.py  convert.py  cover.py  cover_pick.py  inspect.py  library.py  playlist.py  retag.py  serve.py  tui.py  ui.py
src/musickit/enrich/: __init__.py  _http.py  acoustid.py  coverart.py  musicbrainz.py  musichoarders.py
src/musickit/lyrics/: __init__.py  lrclib.py  sidecar.py
src/musickit/metadata/: __init__.py  album.py  models.py  overrides.py  read.py  write.py
src/musickit/pipeline/: __init__.py  acoustid.py  album.py  dedupe.py  disc.py  filenames.py  footprint.py  progress.py  report.py  run.py  track.py
src/musickit/playlist/: __init__.py  build.py  io.py  similarity.py
src/musickit/serve/: __init__.py  app.py  auth.py  config.py  cover_cache.py  covers.py  discovery.py  ids.py  index.py  logging.py  payloads.py  radio_proxy.py  scrobble.py  search_index.py  stars.py  watcher.py  xml.py
src/musickit/serve/endpoints/: __init__.py  browsing.py  extras.py  lyrics.py  media.py  radio.py  scan.py  search.py  stubs.py  system.py
src/musickit/tui/: __init__.py  advance.py  airplay.py  airplay_picker.py  app.py  audio_engine.py  audio_io.py  audio_proto.py  commands.py  discovery.py  filter.py  formatters.py  player.py  state.py  subsonic_client.py  tag_editor.py  types.py  widgets.py
src/musickit/web/: __init__.py  routes.py  session.py
src/musickit/web/static/: app.css  app.js  palette.js  visualizer.js
src/musickit/web/templates/: albums.html  base.html  icons.html  login.html  radio.html  search.html  shell.html  tracks.html
stylesheets/: claude.css
tests/: _tui_wait.py  conftest.py  test_cli_config.py  test_config.py  test_convert.py  test_convert_cli.py  test_cover_pick.py  test_discover.py  test_enrich.py  test_inspect.py  test_library.py  test_library_cover_retag.py  test_library_db.py  test_library_db_rename.py  test_library_rename.py  test_lyrics_lrclib.py  test_lyrics_parse.py  test_lyrics_sidecar.py  test_metadata.py  test_naming.py  test_pipeline.py  test_playlist.py  test_radio.py  test_serve_auth.py  test_serve_browsing.py  test_serve_cli_flags.py  test_serve_cover_cache.py  test_serve_discovery.py  test_serve_extras.py  test_serve_lyrics.py  test_serve_media.py  test_serve_middleware.py  test_serve_radio.py  test_serve_scan.py  test_serve_scrobble.py  test_serve_search.py  test_serve_search_fts.py  test_serve_stars.py  test_serve_stubs.py  test_serve_system.py  (+22 more)
