[project]
name = "musickit"
version = "0.13.0"
description = "Self-hosted music toolkit: convert / audit / retag rips into a clean tagged library, browse + play via a Textual TUI (local / internet radio / Subsonic-client / AirPlay), and stream over Tailscale via a Subsonic-compatible HTTP server."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Morten Hansen", email = "morten@winterop.com" },
]
keywords = [
  "audio",
  "music",
  "ffmpeg",
  "subsonic",
  "tui",
  "library-manager",
  "musicbrainz",
  "airplay",
  "tailscale",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Conversion",
  "Topic :: Multimedia :: Sound/Audio :: Players",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.24.2",
  "mutagen>=1.47.0",
  "rich>=14.0.0",
  "pillow>=11.0.0",
  "httpx>=0.28.1",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "textual>=1.0.0",
  "av>=13.0.0",
  "sounddevice>=0.5.0",
  "numpy>=2.0.0",
  "fastapi>=0.136.1",
  "uvicorn[standard]>=0.46.0",
  "zeroconf>=0.148.0",
  "pyatv>=0.17.0",
  "watchdog>=6.0.0",
  "paho-mqtt>=2.1.0",
  "jinja2>=3.1.6",
  "itsdangerous>=2.2.0",
  "python-multipart>=0.0.27",
]

[project.urls]
Homepage = "https://github.com/winterop-com/musickit"
Repository = "https://github.com/winterop-com/musickit"
Documentation = "https://winterop-com.github.io/musickit"
Issues = "https://github.com/winterop-com/musickit/issues"
Changelog = "https://github.com/winterop-com/musickit/releases"

[project.scripts]
musickit = "musickit.cli:app"

[dependency-groups]
dev = [
  "ruff>=0.15.12",
  "mypy>=1.20.2",
  "pyright>=1.1.409",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "pytest-asyncio>=0.24.0",
  "coverage[toml]>=7.13.5",
  "httpx>=0.28.1",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.6",
  "mkdocstrings[python]>=1.0.4",
  "mkdocs-claude-theme",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "W", "F", "I", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"**/__init__.py" = ["D104"]
"src/**/*.py" = ["D102", "D105", "D107"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".venv", "__pycache__"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
relative_files = true
source = ["musickit"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]
precision = 2
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
strict_equality = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["mutagen.*"]
ignore_missing_imports = true

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/.venv"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportPrivateUsage = false
reportUnusedFunction = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportUnknownLambdaType = false
reportMissingImports = "warning"
reportMissingModuleSource = false

[tool.uv.sources]
mkdocs-claude-theme = { git = "https://github.com/mortenoh/mkdocs-claude-theme.git" }
