[package]
name = "musickit-desktop-react"
# Internal Cargo crate version — intentionally NOT bumped on releases.
# User-visible version metadata lives in tauri.conf.json (sync'd to
# pyproject.toml on every build via scripts/sync_desktop_versions.py).
# Bumping this would force Cargo.lock to update too, and CI doesn't
# run cargo so it'd drift by one version every release. See
# scripts/sync_desktop_versions.py header for the rationale.
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Native desktop wrapper around the MusicKit web UI."
authors = ["Morten Hansen <morten@winterop.com>"]
license = "MIT"

[lib]
name = "musickit_desktop_react_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
