[package]
name = "musickit-desktop"
version = "0.13.3"
edition = "2024"
rust-version = "1.85"
description = "Native desktop wrapper around the MusicKit web UI."
authors = ["Morten Hansen <morten@winterop.com>"]
license = "MIT"

[lib]
name = "musickit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
